# sfml-snake

./: .gitignore  CMakeLists.txt  README.md
include/: snake.hpp
src/: main.cpp  snake.cpp
